@@ -1,5 +1,5 @@
 /*
- *  Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
+ *  Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -23,24 +23,25 @@
 
 /*
  * @test
- * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @enablePreview
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64" | os.arch == "riscv64"
  * @run testng/othervm --enable-native-access=ALL-UNNAMED SafeFunctionAccessTest
  */
 
-import jdk.incubator.foreign.Addressable;
-import jdk.incubator.foreign.CLinker;
-import jdk.incubator.foreign.FunctionDescriptor;
-import jdk.incubator.foreign.NativeSymbol;
-import jdk.incubator.foreign.SymbolLookup;
-import jdk.incubator.foreign.MemoryLayout;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.Arena;
+import java.lang.foreign.Linker;
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemoryLayout;
 
+import java.lang.foreign.SegmentScope;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
 
-import jdk.incubator.foreign.VaList;
+import java.lang.foreign.VaList;
+import java.util.stream.Stream;
+
 import org.testng.annotations.*;
 
 import static org.testng.Assert.*;
@@ -54,17 +55,15 @@ public class SafeFunctionAccessTest extends NativeTestHelper {
             C_INT, C_INT
     );
 
-    static final SymbolLookup LOOKUP = SymbolLookup.loaderLookup();
-
     @Test(expectedExceptions = IllegalStateException.class)
     public void testClosedStruct() throws Throwable {
         MemorySegment segment;
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            segment = MemorySegment.allocateNative(POINT, scope);
+        try (Arena arena = Arena.openConfined()) {
+            segment = arena.allocate(POINT);
         }
         assertFalse(segment.scope().isAlive());
-        MethodHandle handle = CLinker.systemCLinker().downcallHandle(
-                LOOKUP.lookup("struct_func").get(),
+        MethodHandle handle = Linker.nativeLinker().downcallHandle(
+                findNativeOrThrow("struct_func"),
                 FunctionDescriptor.ofVoid(POINT));
 
         handle.invokeExact(segment);
@@ -72,36 +71,42 @@ public class SafeFunctionAccessTest extends NativeTestHelper {
 
     @Test
     public void testClosedStructAddr_6() throws Throwable {
-        MethodHandle handle = CLinker.systemCLinker().downcallHandle(
-                LOOKUP.lookup("addr_func_6").get(),
+        MethodHandle handle = Linker.nativeLinker().downcallHandle(
+                findNativeOrThrow("addr_func_6"),
                 FunctionDescriptor.ofVoid(C_POINTER, C_POINTER, C_POINTER, C_POINTER, C_POINTER, C_POINTER));
+        record Allocation(Arena drop, MemorySegment segment) {
+            static Allocation of(MemoryLayout layout) {
+                Arena arena = Arena.openShared();
+                return new Allocation(arena, arena.allocate(layout));
+            }
+        }
         for (int i = 0 ; i < 6 ; i++) {
-            MemorySegment[] segments = new MemorySegment[]{
-                    MemorySegment.allocateNative(POINT, ResourceScope.newImplicitScope()),
-                    MemorySegment.allocateNative(POINT, ResourceScope.newImplicitScope()),
-                    MemorySegment.allocateNative(POINT, ResourceScope.newImplicitScope()),
-                    MemorySegment.allocateNative(POINT, ResourceScope.newImplicitScope()),
-                    MemorySegment.allocateNative(POINT, ResourceScope.newImplicitScope()),
-                    MemorySegment.allocateNative(POINT, ResourceScope.newImplicitScope())
+            Allocation[] allocations = new Allocation[]{
+                    Allocation.of(POINT),
+                    Allocation.of(POINT),
+                    Allocation.of(POINT),
+                    Allocation.of(POINT),
+                    Allocation.of(POINT),
+                    Allocation.of(POINT)
             };
             // check liveness
-            segments[i].scope().close();
+            allocations[i].drop().close();
             for (int j = 0 ; j < 6 ; j++) {
                 if (i == j) {
-                    assertFalse(segments[j].scope().isAlive());
+                    assertFalse(allocations[j].drop().scope().isAlive());
                 } else {
-                    assertTrue(segments[j].scope().isAlive());
+                    assertTrue(allocations[j].drop().scope().isAlive());
                 }
             }
             try {
-                handle.invokeWithArguments(segments);
+                handle.invokeWithArguments(Stream.of(allocations).map(Allocation::segment).toArray());
                 fail();
             } catch (IllegalStateException ex) {
                 assertTrue(ex.getMessage().contains("Already closed"));
             }
             for (int j = 0 ; j < 6 ; j++) {
                 if (i != j) {
-                    segments[j].scope().close(); // should succeed!
+                    allocations[j].drop().close(); // should succeed!
                 }
             }
         }
@@ -110,88 +115,88 @@ public class SafeFunctionAccessTest extends NativeTestHelper {
     @Test(expectedExceptions = IllegalStateException.class)
     public void testClosedVaList() throws Throwable {
         VaList list;
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            list = VaList.make(b -> b.addVarg(C_INT, 42), scope);
+        try (Arena arena = Arena.openConfined()) {
+            list = VaList.make(b -> b.addVarg(C_INT, 42), arena.scope());
         }
-        assertFalse(list.scope().isAlive());
-        MethodHandle handle = CLinker.systemCLinker().downcallHandle(
-                LOOKUP.lookup("addr_func").get(),
+        assertFalse(list.segment().scope().isAlive());
+        MethodHandle handle = Linker.nativeLinker().downcallHandle(
+                findNativeOrThrow("addr_func"),
                 FunctionDescriptor.ofVoid(C_POINTER));
 
-        handle.invokeExact((Addressable)list);
+        handle.invokeExact(list.segment());
     }
 
     @Test(expectedExceptions = IllegalStateException.class)
     public void testClosedUpcall() throws Throwable {
-        NativeSymbol upcall;
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+        MemorySegment upcall;
+        try (Arena arena = Arena.openConfined()) {
             MethodHandle dummy = MethodHandles.lookup().findStatic(SafeFunctionAccessTest.class, "dummy", MethodType.methodType(void.class));
-            upcall = CLinker.systemCLinker().upcallStub(dummy, FunctionDescriptor.ofVoid(), scope);
+            upcall = Linker.nativeLinker().upcallStub(dummy, FunctionDescriptor.ofVoid(), arena.scope());
         }
         assertFalse(upcall.scope().isAlive());
-        MethodHandle handle = CLinker.systemCLinker().downcallHandle(
-                LOOKUP.lookup("addr_func").get(),
+        MethodHandle handle = Linker.nativeLinker().downcallHandle(
+                findNativeOrThrow("addr_func"),
                 FunctionDescriptor.ofVoid(C_POINTER));
 
-        handle.invokeExact((Addressable)upcall);
+        handle.invokeExact(upcall);
     }
 
     static void dummy() { }
 
     @Test
     public void testClosedVaListCallback() throws Throwable {
-        MethodHandle handle = CLinker.systemCLinker().downcallHandle(
-                LOOKUP.lookup("addr_func_cb").get(),
+        MethodHandle handle = Linker.nativeLinker().downcallHandle(
+                findNativeOrThrow("addr_func_cb"),
                 FunctionDescriptor.ofVoid(C_POINTER, C_POINTER));
 
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            VaList list = VaList.make(b -> b.addVarg(C_INT, 42), scope);
-            handle.invoke(list, scopeChecker(scope));
+        try (Arena arena = Arena.openConfined()) {
+            VaList list = VaList.make(b -> b.addVarg(C_INT, 42), arena.scope());
+            handle.invokeExact(list.segment(), sessionChecker(arena));
         }
     }
 
     @Test
     public void testClosedStructCallback() throws Throwable {
-        MethodHandle handle = CLinker.systemCLinker().downcallHandle(
-                LOOKUP.lookup("addr_func_cb").get(),
+        MethodHandle handle = Linker.nativeLinker().downcallHandle(
+                findNativeOrThrow("addr_func_cb"),
                 FunctionDescriptor.ofVoid(C_POINTER, C_POINTER));
 
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.allocateNative(POINT, scope);
-            handle.invoke(segment, scopeChecker(scope));
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment segment = arena.allocate(POINT);
+            handle.invokeExact(segment, sessionChecker(arena));
         }
     }
 
     @Test
     public void testClosedUpcallCallback() throws Throwable {
-        MethodHandle handle = CLinker.systemCLinker().downcallHandle(
-                LOOKUP.lookup("addr_func_cb").get(),
+        MethodHandle handle = Linker.nativeLinker().downcallHandle(
+                findNativeOrThrow("addr_func_cb"),
                 FunctionDescriptor.ofVoid(C_POINTER, C_POINTER));
 
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+        try (Arena arena = Arena.openConfined()) {
             MethodHandle dummy = MethodHandles.lookup().findStatic(SafeFunctionAccessTest.class, "dummy", MethodType.methodType(void.class));
-            NativeSymbol upcall = CLinker.systemCLinker().upcallStub(dummy, FunctionDescriptor.ofVoid(), scope);
-            handle.invoke(upcall, scopeChecker(scope));
+            MemorySegment upcall = Linker.nativeLinker().upcallStub(dummy, FunctionDescriptor.ofVoid(), arena.scope());
+            handle.invokeExact(upcall, sessionChecker(arena));
         }
     }
 
-    NativeSymbol scopeChecker(ResourceScope scope) {
+    MemorySegment sessionChecker(Arena arena) {
         try {
-            MethodHandle handle = MethodHandles.lookup().findStatic(SafeFunctionAccessTest.class, "checkScope",
-                    MethodType.methodType(void.class, ResourceScope.class));
-            handle = handle.bindTo(scope);
-            return CLinker.systemCLinker().upcallStub(handle, FunctionDescriptor.ofVoid(), ResourceScope.newImplicitScope());
+            MethodHandle handle = MethodHandles.lookup().findStatic(SafeFunctionAccessTest.class, "checkSession",
+                    MethodType.methodType(void.class, Arena.class));
+            handle = handle.bindTo(arena);
+            return Linker.nativeLinker().upcallStub(handle, FunctionDescriptor.ofVoid(), SegmentScope.auto());
         } catch (Throwable ex) {
             throw new AssertionError(ex);
         }
     }
 
-    static void checkScope(ResourceScope scope) {
+    static void checkSession(Arena arena) {
         try {
-            scope.close();
-            fail("Scope closed unexpectedly!");
+            arena.close();
+            fail("Session closed unexpectedly!");
         } catch (IllegalStateException ex) {
-            assertTrue(ex.getMessage().contains("kept alive")); //if acquired, fine
+            assertTrue(ex.getMessage().contains("acquired")); //if acquired, fine
         }
     }
 }
