@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,13 +24,13 @@
 
 /*
  * @test
- * @modules jdk.incubator.foreign/jdk.internal.foreign
- *
+ * @enablePreview
+ * @modules java.base/jdk.internal.foreign
  * @run testng TestLayoutEquality
  */
 
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.ValueLayout;
+import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.ValueLayout;
 import jdk.internal.foreign.PlatformLayouts;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
@@ -39,24 +39,17 @@ import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.List;
 
-import static jdk.incubator.foreign.ValueLayout.ADDRESS;
-import static jdk.incubator.foreign.ValueLayout.JAVA_BOOLEAN;
-import static jdk.incubator.foreign.ValueLayout.JAVA_BYTE;
-import static jdk.incubator.foreign.ValueLayout.JAVA_CHAR;
-import static jdk.incubator.foreign.ValueLayout.JAVA_DOUBLE;
-import static jdk.incubator.foreign.ValueLayout.JAVA_FLOAT;
-import static jdk.incubator.foreign.ValueLayout.JAVA_INT;
-import static jdk.incubator.foreign.ValueLayout.JAVA_LONG;
-import static jdk.incubator.foreign.ValueLayout.JAVA_SHORT;
 import static org.testng.Assert.*;
 
 public class TestLayoutEquality {
 
     @Test(dataProvider = "layoutConstants")
     public void testReconstructedEquality(ValueLayout layout) {
-        ValueLayout newLayout = valueLayoutForCarrier(layout.carrier());
+        ValueLayout newLayout = MemoryLayout.valueLayout(layout.carrier(), layout.order());
         newLayout = newLayout.withBitAlignment(layout.bitAlignment());
-        newLayout = newLayout.withOrder(layout.order());
+        if (layout instanceof ValueLayout.OfAddress addressLayout && addressLayout.isUnbounded()) {
+            newLayout = ((ValueLayout.OfAddress)newLayout).asUnbounded();
+        }
 
         // properties should be equal
         assertEquals(newLayout.bitSize(), layout.bitSize());
@@ -74,6 +67,7 @@ public class TestLayoutEquality {
         addLayoutConstants(testValues, PlatformLayouts.SysV.class);
         addLayoutConstants(testValues, PlatformLayouts.Win64.class);
         addLayoutConstants(testValues, PlatformLayouts.AArch64.class);
+        addLayoutConstants(testValues, PlatformLayouts.RISCV64.class);
 
         return testValues.stream().map(e -> new Object[]{ e }).toArray(Object[][]::new);
     }
@@ -82,30 +76,6 @@ public class TestLayoutEquality {
         for (Field f : cls.getFields()) {
             if (f.getName().startsWith("C_"))
                 testValues.add((ValueLayout) f.get(null));
-        }
-    }
-
-    static ValueLayout valueLayoutForCarrier(Class<?> carrier) {
-        if (carrier == boolean.class) {
-            return JAVA_BOOLEAN;
-        } else if (carrier == char.class) {
-            return JAVA_CHAR;
-        } else if (carrier == byte.class) {
-            return JAVA_BYTE;
-        } else if (carrier == short.class) {
-            return JAVA_SHORT;
-        } else if (carrier == int.class) {
-            return JAVA_INT;
-        } else if (carrier == long.class) {
-            return JAVA_LONG;
-        } else if (carrier == float.class) {
-            return JAVA_FLOAT;
-        } else if (carrier == double.class) {
-            return JAVA_DOUBLE;
-        } else if (carrier == MemoryAddress.class) {
-            return ADDRESS;
-        } else {
-            throw new UnsupportedOperationException();
         }
     }
 }
