@@ -1,5 +1,5 @@
 /*
- *  Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
+ *  Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -23,19 +23,21 @@
 
 /*
  * @test
+ * @enablePreview
  * @run testng/othervm TestSegmentOverlap
  */
 
 import java.io.File;
 import java.io.IOException;
+import java.lang.foreign.SegmentScope;
 import java.nio.channels.FileChannel;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.util.List;
 import java.util.function.Supplier;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.MemorySegment;
+
 import org.testng.annotations.Test;
 import org.testng.annotations.DataProvider;
 import static java.lang.System.out;
@@ -60,10 +62,10 @@ public class TestSegmentOverlap {
     @DataProvider(name = "segmentFactories")
     public Object[][] segmentFactories() {
         List<Supplier<MemorySegment>> l = List.of(
-                () -> MemorySegment.allocateNative(16, ResourceScope.newConfinedScope()),
+                () -> MemorySegment.allocateNative(16, SegmentScope.auto()),
                 () -> {
-                    try {
-                        return MemorySegment.mapFile(tempPath, 0L, 16, FileChannel.MapMode.READ_WRITE, ResourceScope.newConfinedScope());
+                    try (FileChannel fileChannel = FileChannel.open(tempPath, StandardOpenOption.READ, StandardOpenOption.WRITE)) {
+                        return fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, 16L, SegmentScope.auto());
                     } catch (IOException e) {
                         throw new RuntimeException(e);
                     }
@@ -86,9 +88,9 @@ public class TestSegmentOverlap {
         var sOther = s1.isNative() ? OtherSegmentFactory.HEAP.factory.get()
                 : OtherSegmentFactory.NATIVE.factory.get();
         out.format("testBasic s1:%s, s2:%s, sOther:%s\n", s1, s2, sOther);
-        assertNull(s1.asOverlappingSlice(s2));
-        assertNull(s2.asOverlappingSlice(s1));
-        assertNull(s1.asOverlappingSlice(sOther));
+        assertTrue(s1.asOverlappingSlice(s2).isEmpty());
+        assertTrue(s2.asOverlappingSlice(s1).isEmpty());
+        assertTrue(s1.asOverlappingSlice(sOther).isEmpty());
     }
 
     @Test(dataProvider="segmentFactories")
@@ -96,15 +98,15 @@ public class TestSegmentOverlap {
         var s1 = segmentSupplier.get();
         var s2 = s1.asReadOnly();
         out.format("testIdentical s1:%s, s2:%s\n", s1, s2);
-        assertEquals(s1.asOverlappingSlice(s2).byteSize(), s1.byteSize());
-        assertEquals(s1.asOverlappingSlice(s2).scope(), s1.scope());
+        assertEquals(s1.asOverlappingSlice(s2).get().byteSize(), s1.byteSize());
+        assertEquals(s1.asOverlappingSlice(s2).get().scope(), s1.scope());
 
-        assertEquals(s2.asOverlappingSlice(s1).byteSize(), s2.byteSize());
-        assertEquals(s2.asOverlappingSlice(s1).scope(), s2.scope());
+        assertEquals(s2.asOverlappingSlice(s1).get().byteSize(), s2.byteSize());
+        assertEquals(s2.asOverlappingSlice(s1).get().scope(), s2.scope());
 
         if (s1.isNative()) {
-            assertEquals(s1.asOverlappingSlice(s2).address(), s1.address());
-            assertEquals(s2.asOverlappingSlice(s1).address(), s2.address());
+            assertEquals(s1.asOverlappingSlice(s2).get().address(), s1.address());
+            assertEquals(s2.asOverlappingSlice(s1).get().address(), s2.address());
         }
     }
 
@@ -115,22 +117,22 @@ public class TestSegmentOverlap {
         for (int offset = 0 ; offset < 4 ; offset++) {
             MemorySegment slice = s1.asSlice(offset);
             out.format("testSlices s1:%s, s2:%s, slice:%s, offset:%d\n", s1, s2, slice, offset);
-            assertEquals(s1.asOverlappingSlice(slice).byteSize(), s1.byteSize() - offset);
-            assertEquals(s1.asOverlappingSlice(slice).scope(), s1.scope());
+            assertEquals(s1.asOverlappingSlice(slice).get().byteSize(), s1.byteSize() - offset);
+            assertEquals(s1.asOverlappingSlice(slice).get().scope(), s1.scope());
 
-            assertEquals(slice.asOverlappingSlice(s1).byteSize(), slice.byteSize());
-            assertEquals(slice.asOverlappingSlice(s1).scope(), slice.scope());
+            assertEquals(slice.asOverlappingSlice(s1).get().byteSize(), slice.byteSize());
+            assertEquals(slice.asOverlappingSlice(s1).get().scope(), slice.scope());
 
             if (s1.isNative()) {
-                assertEquals(s1.asOverlappingSlice(slice).address(), s1.address().addOffset(offset));
-                assertEquals(slice.asOverlappingSlice(s1).address(), slice.address());
+                assertEquals(s1.asOverlappingSlice(slice).get().address(), s1.address() + offset);
+                assertEquals(slice.asOverlappingSlice(s1).get().address(), slice.address());
             }
-            assertNull(s2.asOverlappingSlice(slice));
+            assertTrue(s2.asOverlappingSlice(slice).isEmpty());
         }
     }
 
     enum OtherSegmentFactory {
-        NATIVE(() -> MemorySegment.allocateNative(16, ResourceScope.newConfinedScope())),
+        NATIVE(() -> MemorySegment.allocateNative(16, SegmentScope.auto())),
         HEAP(() -> MemorySegment.ofArray(new byte[]{16}));
 
         final Supplier<MemorySegment> factory;
