@@ -23,12 +23,12 @@
 
 package org.openjdk.foreigntest;
 
-import jdk.incubator.foreign.*;
+import java.lang.foreign.*;
 
 public class PanamaMain {
    public static void main(String[] args) {
-       System.out.println("Trying to get CLinker");
-       CLinker.systemCLinker();
-       System.out.println("Got CLinker");
+       System.out.println("Trying to get Linker");
+       Linker.nativeLinker();
+       System.out.println("Got Linker");
    }
 }
