@@ -1,5 +1,6 @@
+
 /*
- * Copyright (c) 2017, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2017, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -28,10 +29,9 @@ import java.util.function.Function;
 
 /*
  * @test
- * @bug 8262891 8268333 8268896 8269802 8269808 8270151 8269113 8277864
+ * @bug 8262891 8268333 8268896 8269802 8269808 8270151 8269113 8277864 8290709
  * @summary Check behavior of pattern switches.
- * @compile --enable-preview -source ${jdk.version} Switches.java
- * @run main/othervm --enable-preview Switches
+ * @enablePreview
  */
 public class Switches {
 
@@ -47,8 +47,6 @@ public class Switches {
         assertTrue(testNullSwitch(""));
         runArrayTypeTest(this::testArrayTypeStatement);
         runArrayTypeTest(this::testArrayTypeExpression);
-        runDefaultTest(this::testDefaultDoesNotDominateStatement);
-        runDefaultTest(this::testDefaultDoesNotDominateExpression);
         runEnumTest(this::testEnumExpression1);
         runEnumTest(this::testEnumExpression2);
         runEnumTest(this::testEnumWithGuards1);
@@ -82,12 +80,31 @@ public class Switches {
         switchNestingTest(this::switchNestingExpressionStatement);
         switchNestingTest(this::switchNestingExpressionExpression);
         switchNestingTest(this::switchNestingIfSwitch);
-        assertEquals(2, switchOverNull1());
+        npeTest(x -> switchOverNull1());
         assertEquals(2, switchOverNull2());
         assertEquals(2, switchOverNull3());
         assertEquals(5, switchOverPrimitiveInt(0));
         assertEquals(7, switchOverPrimitiveInt(1));
         assertEquals(9, switchOverPrimitiveInt(2));
+        assertEquals("a", deconstructStatement(new R("a")));
+        assertEquals("1", deconstructStatement(new R(1)));
+        assertEquals("other", deconstructStatement(""));
+        assertEquals("a", deconstructExpression(new R("a")));
+        assertEquals("1", deconstructExpression(new R(1)));
+        assertEquals("other", deconstructExpression(""));
+        assertEquals("a", translationTest("a"));
+        assertEquals("Rb", translationTest(new R("b")));
+        assertEquals("R2c", translationTest(new R2("c")));
+        assertEquals("other", translationTest(0));
+        assertEquals("OK", totalPatternAndNull(Integer.valueOf(42)));
+        assertEquals("OK", totalPatternAndNull(null));
+        assertEquals("1", nullAfterTotal(Integer.valueOf(42)));
+        assertEquals("OK", nullAfterTotal(null));
+        emptyFallThrough(1);
+        emptyFallThrough("");
+        emptyFallThrough(1.0);
+        testSimpleSwitch();
+        testSimpleSwitchExpression();
     }
 
     void run(Function<Object, Integer> mapper) {
@@ -216,22 +233,6 @@ public class Switches {
         };
     }
 
-    String testDefaultDoesNotDominateStatement(Object o) {
-        String res;
-        switch (o) {
-            default -> res = "default";
-            case String str -> res = "str" + str.length();
-        }
-        return res;
-    }
-
-    String testDefaultDoesNotDominateExpression(Object o) {
-        return switch (o) {
-            case default -> "default";
-            case String str -> "str" + str.length();
-        };
-    }
-
     int testStringWithConstant(String str) {
         switch (str) {
             case "A": return 1;
@@ -252,7 +253,8 @@ public class Switches {
         return switch (e) {
             case A -> "a";
             case B -> "b";
-            case null, E x -> String.valueOf(x);
+            case E x -> String.valueOf(x);
+            case null -> "null";
         };
     }
 
@@ -260,7 +262,8 @@ public class Switches {
         return switch (e) {
             case A -> "a";
             case B -> "b";
-            case E x, null -> String.valueOf(x);
+            case E x -> String.valueOf(x);
+            case null -> "null";
         };
     }
 
@@ -269,8 +272,9 @@ public class Switches {
             case A: return "a";
             case B: return "b";
             case C: return String.valueOf(e);
-            case E x && "A".equals(x.name()): return "broken";
-            case null, E x: return String.valueOf(x);
+            case E x when "A".equals(x.name()): return "broken";
+            case E x: return String.valueOf(x);
+            case null: return "null";
         }
     }
 
@@ -279,8 +283,9 @@ public class Switches {
             case A -> "a";
             case B -> "b";
             case C -> String.valueOf(e);
-            case E x && "A".equals(x.name()) -> "broken";
-            case null, E x -> String.valueOf(x);
+            case E x when "A".equals(x.name()) -> "broken";
+            case E x -> String.valueOf(x);
+            case null -> "null";
         };
     }
 
@@ -288,8 +293,9 @@ public class Switches {
         switch (e) {
             case A: return "a";
             case B: return "b";
-            case E x && "C".equals(x.name()): return "C";
-            case null, E x: return e == E.C ? "broken" : String.valueOf(x);
+            case E x when "C".equals(x.name()): return "C";
+            case E x: return e == E.C ? "broken" : String.valueOf(x);
+            case null: return "null";
         }
     }
 
@@ -297,8 +303,9 @@ public class Switches {
         return switch (e) {
             case A -> "a";
             case B -> "b";
-            case E x && "C".equals(x.name()) -> "C";
-            case null, E x -> e == E.C ? "broken" : String.valueOf(x);
+            case E x when "C".equals(x.name()) -> "C";
+            case E x -> e == E.C ? "broken" : String.valueOf(x);
+            case null -> "null";
         };
     }
 
@@ -306,8 +313,9 @@ public class Switches {
         switch (e) {
             case A: return "a";
             case B: return "b";
-            case Object x && "C".equals(x.toString()): return "C";
-            case null, E x: return e == E.C ? "broken" : String.valueOf(x);
+            case Object x when "C".equals(x.toString()): return "C";
+            case E x: return e == E.C ? "broken" : String.valueOf(x);
+            case null: return "null";
         }
     }
 
@@ -315,8 +323,9 @@ public class Switches {
         return switch (e) {
             case A -> "a";
             case B -> "b";
-            case Object x && "C".equals(x.toString()) -> "C";
-            case null, E x -> e == E.C ? "broken" : String.valueOf(x);
+            case Object x when "C".equals(x.toString()) -> "C";
+            case E x -> e == E.C ? "broken" : String.valueOf(x);
+            case null -> "null";
         };
     }
 
@@ -324,8 +333,9 @@ public class Switches {
         switch (e) {
             case A: return "a";
             case B: return "b";
-            case Runnable x && "C".equals(x.toString()): return "C";
-            case null, E x: return e == E.C ? "broken" : String.valueOf(x);
+            case Runnable x when "C".equals(x.toString()): return "C";
+            case E x: return e == E.C ? "broken" : String.valueOf(x);
+            case null: return "null";
         }
     }
 
@@ -333,8 +343,9 @@ public class Switches {
         return switch (e) {
             case A -> "a";
             case B -> "b";
-            case Runnable x && "C".equals(x.toString()) -> "C";
-            case null, E x -> e == E.C ? "broken" : String.valueOf(x);
+            case Runnable x when "C".equals(x.toString()) -> "C";
+            case E x -> e == E.C ? "broken" : String.valueOf(x);
+            case null -> "null";
         };
     }
 
@@ -342,8 +353,9 @@ public class Switches {
         switch (e != null ? e.name() : null) {
             case "A": return "a";
             case Switches.ConstantClassClash: return "b";
-            case String x && "C".equals(x): return "C";
-            case null, String x: return "C".equals(x) ? "broken" : String.valueOf(x);
+            case String x when "C".equals(x): return "C";
+            case String x: return "C".equals(x) ? "broken" : String.valueOf(x);
+            case null: return "null";
         }
     }
 
@@ -351,8 +363,9 @@ public class Switches {
         return switch (e != null ? e.name() : null) {
             case "A" -> "a";
             case ConstantClassClash -> "b";
-            case String x && "C".equals(x) -> "C";
-            case null, String x -> e == E.C ? "broken" : String.valueOf(x);
+            case String x when "C".equals(x) -> "C";
+            case String x -> e == E.C ? "broken" : String.valueOf(x);
+            case null -> "null";
         };
     }
 
@@ -360,8 +373,9 @@ public class Switches {
         switch (e != null ? e.ordinal() : null) {
             case 0: return "a";
             case 1: return "b";
-            case Integer x && x.equals(2): return "C";
-            case null, Integer x: return Objects.equals(x, 2) ? "broken" : String.valueOf(x);
+            case Integer x when x.equals(2): return "C";
+            case Integer x: return Objects.equals(x, 2) ? "broken" : String.valueOf(x);
+            case null: return "null";
         }
     }
 
@@ -369,8 +383,9 @@ public class Switches {
         return switch (e != null ? e.ordinal() : null) {
             case 0 -> "a";
             case 1 -> "b";
-            case Integer x && x.equals(2) -> "C";
-            case null, Integer x -> Objects.equals(x, 2) ? "broken" : String.valueOf(x);
+            case Integer x when x.equals(2) -> "C";
+            case Integer x -> Objects.equals(x, 2) ? "broken" : String.valueOf(x);
+            case null -> "null";
         };
     }
 
@@ -378,7 +393,7 @@ public class Switches {
         int r = 0;
 
         switch (i) {
-            case Integer o && o != null:
+            case Integer o when o != null:
                 r = 1;
             default:
                 r = 2;
@@ -389,7 +404,7 @@ public class Switches {
 
     Integer testFallThroughExpression(Integer i) {
         int r = switch (i) {
-            case Integer o && o != null:
+            case Integer o when o != null:
                 r = 1;
             default:
                 r = 2;
@@ -403,7 +418,7 @@ public class Switches {
         int r = 0;
 
         switch (i) {
-            case Integer o && o != null:
+            case Integer o when o != null:
                 r = 1;
             case null, default:
                 r = 2;
@@ -414,7 +429,7 @@ public class Switches {
 
     Integer testFallThrough2Expression(Integer i) {
         int r = switch (i) {
-            case Integer o && o != null:
+            case Integer o when o != null:
                 r = 1;
             case null, default:
                 r = 2;
@@ -439,25 +454,34 @@ public class Switches {
     }
 
     void exhaustiveStatementSane(Object o) {
-        switch (o) {
-            case Object obj:; //no break intentionally - should not fall through to any possible default
+        try {
+            switch (o) {
+                case Object obj:; //no break intentionally - should not fall through to any possible default
+            }
+            if (o == null) {
+                throw new AssertionError();
+            }
+        } catch (NullPointerException ex) {
+            if (o != null) {
+                throw new AssertionError();
+            }
         }
         switch (o) {
-            case null, Object obj:; //no break intentionally - should not fall through to any possible default
-        }
-        switch (o) {
-            case Object obj, null:; //no break intentionally - should not fall through to any possible default
+            case Object obj: int i;
+            case null:; //no break intentionally - should not fall through to any possible default
         }
     }
 
     void exhaustiveStatementSane2(I i) {
         switch (i) {
             case A a: break;
-            case null, B b:; //no break intentionally - should not fall through to any possible default
+            case B b:; //no break intentionally - should not fall through to any possible default
+            case null:;
         }
         switch (i) {
             case A a -> {}
-            case null, B b -> {}
+            case B b -> {}
+            case null -> {}
         }
     }
 
@@ -597,9 +621,74 @@ public class Switches {
     private int switchOverPrimitiveInt(Integer i) {
         return switch (i) {
             case 0 -> 5 + 0;
-            case Integer j && j == 1 -> 6 + j;
+            case Integer j when j == 1 -> 6 + j;
             case Integer j -> 7 + j;
         };
+    }
+
+    String deconstructStatement(Object o) {
+        switch (o) {
+            case R(String s) -> {return s;}
+            case R(Integer i) -> {return i.toString();}
+            case Object x -> {return "other";}
+        }
+    }
+
+    String deconstructExpression(Object o) {
+        return switch (o) {
+            case R(String s) -> s;
+            case R(Integer i) -> i.toString();
+            case Object x -> "other";
+        };
+    }
+
+    String translationTest(Object o) {
+        return switch (o) {
+            case R(String s) -> "R" + s;
+            case String s -> s;
+            case R2(String s) -> "R2" + s;
+            default -> "other";
+        };
+    }
+
+    String totalPatternAndNull(Integer in) {
+        return switch (in) {
+            case -1: { yield "";}
+            case null: { yield "OK";}
+            case Integer i: { yield "OK";}
+        };
+    }
+
+    String nullAfterTotal(Object o) {
+        return switch (o) {
+            case Object obj: { yield "1";}
+            case null: { yield "OK";}
+        };
+    }
+
+    void emptyFallThrough(Object o) {
+        switch (o) {
+            case Integer i:
+            case String s:
+            case Object obj:
+        }
+    }
+
+    void testSimpleSwitch() {
+        Object o = "";
+        int res;
+        switch (o) {
+            default -> res = 1;
+        };
+        assertEquals(1, res);
+    }
+
+    void testSimpleSwitchExpression() {
+        Object o = "";
+        int res = switch (o) {
+            default -> 1;
+        };
+        assertEquals(1, res);
     }
 
     //verify that for cases like:
@@ -641,4 +730,7 @@ public class Switches {
 
         @Override public void run() {}
     }
+
+    record R(Object o) {}
+    record R2(Object o) {}
 }
